--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/computer_shop
-    username: root
-    password: 12345
-    
+    url: jdbc:mysql://198.37.120.210:3306/gizmolk_springboot
+    username: gizmolk_support
+    password: BANK5155ks@1
 
   jpa:
     hibernate:
